# hello-actions

./: LICENSE.txt  README.org  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-docs.yaml  ci-test.yml
docs/source/: conf.py  index.rst
hello_actions/: common.py
hello_actions/tests/: test_common.py
