[metadata]
name = hello-actions
description = An example python package to test github actions
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
url = https://github.com/detrout/hellow-action
author = Diane Trout
author_email = diane@ghic.org
license = MIT-0
license_file = LICENSE.txt
project_urls =
   Source = https://github.com/detrout/hello-actions
   Tracker = https://github.com/detrout/hello-actions/issues

[options]
packages = find:
setup_requires =
  setuptools_scm

[options.extras_require]
test =
  pytest
 